Bug 703444. Port SPS profiler to Windows. r=jmuizelaar

Some changes and fixes by Felipe Gomes. r=benwa,ehsan