tools/profiler/sps/platform-macos.cc
@@ -280,7 +280,6 @@ Sampler::Sampler(int interval, bool profiling)
     : // isolate_(isolate),
       interval_(interval),
       profiling_(profiling),
-      synchronous_(profiling),
       active_(false) /*,
       samples_taken_(0)*/ {
   data_ = new PlatformData;
